* pax: The '-u' option is now respected in read mode too.
* pax: The '-n' option in read mode does not mark a pattern as used if it
  matched an archive entry but that entry was not selected due to '-u'.
* pax: If link() fails, no separate copy of an archive entry is created.
* pax: When a socket is encountered, print an error message and exit with
  failure.
* find: Symbolic modes for -perm that include the sgid bit now work properly.
* cp: The -f option does not disable the -i option in the POSIX personality
  and vice-versa.
* df: Percentage values are now rounded to the next integer as demanded by
  POSIX.
* man: With the -k option, the exit status is now 0 if any matches have been
  found.
* stty: If ispeed and ospeed are different, both are printed separately.
* stty: If the system does not support split input/output speed, the 'ispeed'
  and 'ospeed' operands have no effect if both are given.
* tabs: The -T option had no effect. Its argument is now required.
* wc: Use a column-aligned output format for the POSIX version too since the
  standard does not actually disallow it.

Release 050123
* tr: The highest acceptable wide character for complementing strings is now
  dynamically reset from 0x10FFFF to 0xFFFF if memory is sparse. The size of
  the corresponding hash table has been raised to reduce computing time.
* grep: With the -r option, directory loops caused by symbolic links are now
  detected and avoided. The -R option does no longer follow symbolic links
  that point to directories.
* pg: If the end of file was located immediately after the line displayed
  before the prompt, the same screen was displayed twice, once with the
  regular prompt and then with '(EOF):'. The end-of-file condition is now
  detected earlier, and the prompt is changed earlier accordingly.
* od: Fixed a one-byte heap overflow in the output buffering mechanism.
* more: If a 'n' command was given without a previous '/', a segmentation