@@ -1,10 +1,13 @@
-all: cpio pax
+all: cpio pax pax_su3
 
 cpio: cpio.o unshrink.o explode.o expand.o inflate.o crc32.o blast.o flags.o nonpax.o
 	$(LD) $(LDFLAGS) cpio.o unshrink.o explode.o expand.o inflate.o crc32.o blast.o flags.o nonpax.o $(LIBZ) $(LIBBZ2) $(LCOMMON) $(LWCHAR) $(LIBS) -o cpio
 
 pax: cpio pax.o
 	$(LD) $(LDFLAGS) cpio.o unshrink.o explode.o expand.o inflate.o crc32.o blast.o pax.o $(LIBZ) $(LIBBZ2) $(LCOMMON) $(LUXRE) $(LWCHAR) $(LIBS) -o pax
+
+pax_su3: cpio pax_su3.o
+	$(LD) $(LDFLAGS) cpio.o unshrink.o explode.o expand.o inflate.o crc32.o blast.o pax_su3.o $(LIBZ) $(LIBBZ2) $(LCOMMON) $(LUXRE) $(LWCHAR) $(LIBS) -o pax_su3
 
 cpio.o: cpio.c
 	$(CC) $(CFLAGS) $(CPPFLAGS) $(GNUFL) $(LARGEF) $(IWCHAR) $(ICOMMON) -DUSE_ZLIB=$(USE_ZLIB) -DUSE_BZLIB=$(USE_BZLIB) -c cpio.c
@@ -17,6 +20,9 @@ nonpax.o: nonpax.c
 
 pax.o: pax.c
 	$(CC) $(CFLAGS) $(CPPFLAGS) $(GNUFL) $(LARGEF) $(IWCHAR) $(ICOMMON) $(IUXRE) -c pax.c
+
+pax_su3.o: pax.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(GNUFL) $(LARGEF) $(IWCHAR) $(ICOMMON) $(IUXRE) -DSU3 -c pax.c -o pax_su3.o
 
 unshrink.o: unshrink.c
 	$(CC) $(CFLAGS2) $(CPPFLAGS) $(GNUFL) $(LARGEF) $(IWCHAR) $(ICOMMON) -c unshrink.c
@@ -39,13 +45,15 @@ blast.o: blast.c
 install: all
 	$(UCBINST) -c cpio $(ROOT)$(DEFBIN)/cpio
 	$(STRIP) $(ROOT)$(DEFBIN)/cpio
-	$(UCBINST) -c pax $(ROOT)$(DEFBIN)/pax
-	$(STRIP) $(ROOT)$(DEFBIN)/pax
+	$(UCBINST) -c pax $(ROOT)$(SV3BIN)/pax
+	$(STRIP) $(ROOT)$(SV3BIN)/pax
+	$(UCBINST) -c pax_su3 $(ROOT)$(SU3BIN)/pax
+	$(STRIP) $(ROOT)$(SU3BIN)/pax
 	$(MANINST) -c -m 644 cpio.1 $(ROOT)$(MANDIR)/man1/cpio.1
 	$(MANINST) -c -m 644 pax.1 $(ROOT)$(MANDIR)/man1/pax.1
 
 clean:
-	rm -f cpio cpio.o unshrink.o explode.o expand.o inflate.o crc32.o blast.o flags.o nonpax.o pax pax.o core log *~
+	rm -f cpio cpio.o unshrink.o explode.o expand.o inflate.o crc32.o blast.o flags.o nonpax.o pax pax.o pax_su3 pax_su3.o core log *~
 
 cpio.o: cpio.h blast.h
 unshrink.o: cpio.h unzip.h
@@ -56,4 +64,5 @@ crc32.o: cpio.h
 blast.o: blast.h
 flags.o: cpio.h
 pax.o: cpio.h
+pax_su3.o: cpio.h
 nonpax.o: cpio.h
