@@ -25,7 +25,7 @@
  * 3. This notice may not be removed or altered from any source distribution.
  */
 
-/*	Sccsid @(#)cpio.h	1.26 (gritter) 6/27/04	*/
+/*	Sccsid @(#)cpio.h	1.27 (gritter) 2/6/05	*/
 
 #include <sys/types.h>
 #include <sys/stat.h>
@@ -171,7 +171,11 @@ extern int		printsev;
 extern char		*progname;
 extern struct glist	*patterns;
 
-extern int		pax;
+enum {			/* type of pax command this is */
+	PAX_TYPE_CPIO		= 0,	/* not a pax command */
+	PAX_TYPE_PAX1992	= 1,	/* POSIX.2 pax command */
+	PAX_TYPE_PAX2001	= 2	/* POSIX.1-2001 pax command */
+} pax;
 extern int		pax_dflag;
 extern int		pax_kflag;
 extern int		pax_nflag;
